@@ -69,6 +69,7 @@ Jim Rutledge                    bug reports and suggestions
 Rich Salz                       bug reports and suggestions
 Stephan A. Terre                bug reports
 Lucio Torre                     suggestions
+Miloslav Trmac			bug reports and patches
 Sheng-Te Tsao                   bug reports and suggestions
 Kevin Turner                    bug report
 Joe VanAndel                    bug reports
